[metadata]
name = plover-stenohedron
version = 0.3.1
description = Modified layout with extra keys and remapped right bank.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/xenohedron/plover-stenohedron
keywords = plover plover_plugin
classifiers =
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
install_requires =
	plover>=4.0.0.dev8
py_modules =
	hedron_stenotype

[options.entry_points]
plover.system =
  Hedron Stenotype = hedron_stenotype
